- Bugfix: timer::moment() now disrespects the ajax or shell
  detection, and works better with the forced logging.
- Bugfix: Prevent other js libraries from messing with the search
  form.
- Bugfix: Prevent a fatal when trying to read the file time from a
  not existing file.
- Bugfix: Prevent unnecessary width "jumping" in the Smokey Grey skin.
- Bugfix: Resource recognition works more accurate.

2.4.0
- Added the method analysis to the recursion detection, to prevent
  analysing the same methods over and over again.
- Added Javascript optimisation for very large output.
- Added mimetype analysis for strings.
- Added prosessing class for "other" variable types.
- Added info button to the hans skin, to replace the somewhat
  intrusive hover info.
- Change: Moved the overwrites from the GLOBALS to a static class
- Change: Prettified the display of sourcecode in the backtrace in
  the smoky grey skin.
- Change: Removed the option for the atomatic registration of the
  fatal error handler.
- Change: Lots of micro optimizations.
- Bugfix: Minimise CSS interference from the hosting cms with
  marked text.
- Change: Simplified array analysis is now configurable.
- Change: Renamed the 'Backtrace' config group to 'pruneOutput'.
- Bugfix: Disabling via sourcecode works again.
- Bugfix: Removed the special backtrace configuration, which
  resulted in a output overkill, crashing the backtrace.
- Bugfix: Removed the comma in the method parameter analysis.
- Bugfix: Fixed in issue, where the correct nesting level was not
  set correctly, resulting in output overkill.
- Bugfix: Fixed codewrapper2 for the code generation in the Hans
  skin.
- Bugfix: Source generation for closures now work as expected.
- Bugfix: Better cleanup for still open HTML tags.

2.3.1
- Bugfix: Fixed shell detection.
- Bugfix: Fixed shell message feedback
- Bugfix: Fixed ajax detection

2.3.0
- Added a configuration for the backtrace, to limit the analysed
  steps.