@@ -60,6 +60,8 @@
   not existing file.
 - Bugfix: Prevent unnecessary width "jumping" in the Smokey Grey skin.
 - Bugfix: Resource recognition works more accurate.
+- Bugfix: Fixed a fatal, when the fileinfo extension is not installed.
+- Bugfix: Fixed a fatal, when the mb-string extension is not installed.
 
 2.4.0
 - Added the method analysis to the recursion detection, to prevent
